<resources>
    <string name="app_name">Rightway</string>
    <string name="web_client">427576789394-3botmelcdrunvn14h1dptpibd8n3r7kj.apps.googleusercontent.com</string>
    <string name="option_3">Intense exercise 6–7 times/week</string>
    <string name="option_2">Exercise 4–5 times/week</string>
    <string name="option_1">Exercise 1–3 times/week</string>
    <string name="option_0">Little or no exercise</string>
    <string name="or">Or</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="trainer">Trainer</string>
    <string name="trainer_to_compare_ar">مدرب</string>
    <string name="trainer_to_compare_en">Trainer</string>
    <string name="trainee">Trainee</string>
    <string name="Workouts">Workouts</string>
    <string name="Brows">Brows</string>
    <string name="Coaches">Coaches</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="get_started">Get started</string>
    <string name="intro_get_started">Let\'s start with some information to help you in best way.</string>
    <string name="password_requirements">Should be at least 6 characters</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="activity_level">Activity</string>
    <string name="sign_out">Sign out</string>
    <string name="back_to_home">Back to Home</string>
    <string name="error_message">Something went wrong\nWe\'er having issues loading this page.\nTry again!</string>
    <string name="confirm_sign_out">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out_error">Something wrong try again!</string>
    <string name="user_info">userInfo</string>
    <string name="enter_age">Enter a age</string>
    <string name="enter_weight">Enter a weight</string>
    <string name="enter_height">Enter a height</string>
    <string name="enter_experience">Enter a experience</string>
    <string name="enter_phone">Enter a phone number</string>
    <string name="enter_email">Enter a valid Email</string>
    <string name="enter_price">Enter a range price</string>
    <string name="enter_first_name">Enter a first name</string>
    <string name="enter_last_name">Enter a last name</string>
    <string name="enter_password">Enter a valid password</string>
    <string name="pre_message">Hi I\'m %1$s,\nI would like to subscribe with you!\n\nSome info about me:\nGender: %2$s\nHeight: %3$s\nWeight: %4$s\nAge: %5$s\nActivity level: %6$s\n</string>
    <string name="pre_subject">Hello, I would like to subscribe with you!</string>
    <string name="required_app">Required app is not installed</string>
    <string name="saved_workouts_fragment">SavedWorkoutsFragment</string>
    <string name="workouts_fragment">WorkoutsFragment</string>
    <string name="workouts_by_equipment_fragment">WorkoutsByEquipmentFragment</string>
    <string name="all_equipment">All Equipment</string>
    <string name="welcome">Welcome %1$s, you\'re in!</string>
    <string name="pause">Pause</string>
    <string name="reset_timer">00:00</string>
    <string name="resume">Resume</string>
    <string name="select_time">Please select a time</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="years">years</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="next">Next</string>
    <string name="track_1_out_of_2">1 out of 2</string>
    <string name="to">To</string>
    <string name="email_address">Email address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="coach_name">Coach name</string>
    <string name="experience">Experience</string>
    <string name="coach_experience">coach experience</string>
    <string name="coach_email">coach email</string>
    <string name="phone">Phone</string>
    <string name="coach_phone">coach phone</string>
    <string name="price">Price</string>
    <string name="coach_price">coach price</string>
    <string name="track_2_out_of_2">2 out of 2</string>
    <string name="activity_level_">Activity Level</string>
    <string name="explain_activity_level">How many times do you workout peer week?</string>
    <string name="done">Done</string>
    <string name="equipment">Equipment</string>
    <string name="all_equipment_">All equipment</string>
    <string name="barbell">Barbell</string>
    <string name="cable">Cable</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="kettle_bell">Kettle bell</string>
    <string name="resistance_band">Resistance band</string>
    <string name="body_weight">Body weight</string>
    <string name="track_1_out_of_1">1 out of 1</string>
    <string name="price_range">Price Range</string>
    <string name="saved_workouts">Saved Workouts</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="coaches">Coaches</string>
    <string name="brows">Brows</string>
    <string name="workout_details">Workout details</string>
    <string name="body_part">Body part</string>
    <string name="target">Target</string>
    <string name="_0">0</string>
    <string name="_00_00">00:00</string>
    <string name="start">Start</string>,
    <string name="stop">Stop</string>
    <string name="nested">Nested</string>
    <string name="workout_photo">workout photo</string>
    <string name="logo">logo</string>
    <string name="title">title</string>
    <string name="waist">Waist</string>
    <string name="profile_key">profile</string>
    <string name="profile_title">Profile</string>
    <string name="general_title">General</string>
    <string name="dark_mode_key">darkMode</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="languages_settings_title">Languages settings</string>
    <string name="languages_key">languages</string>
    <string name="languages_title">Languages</string>
    <string name="en">en</string>
    <string name="personal_title">Personal</string>
    <string name="personal_key">personal</string>
    <string name="languages_settings_title_key">languageTitle</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language_select">English</string>
    <string name="lang_code_en">en</string>
    <string name="lang_code_ar">ar</string>
    <string name="language_code_select">en</string>
    <string name="remember_me">Remember me</string>
    <string name="user_type_dialog">Are you trainer or trainee</string>



    <string-array name="languages">
        <item>@string/english</item>
        <item>@string/arabic</item>
    </string-array>

    <string-array name="lang_code">
        <item>en</item>
        <item>ar</item>
    </string-array>
</resources>