<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.trainee.ActivityFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/track_2_out_of_2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"

            android:text="@string/activity_level_"
            android:textColor="@color/light_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_activity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/explain_activity_level"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/activity_textview"
            app:layout_constraintStart_toStartOf="@id/activity_textview"
            app:layout_constraintTop_toBottomOf="@id/activity_textview" />

        <RadioGroup
            android:id="@+id/activity_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/option_0"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/description_activity_textview"
            app:layout_constraintStart_toStartOf="@id/description_activity_textview"
            app:layout_constraintTop_toBottomOf="@id/description_activity_textview">

            <RadioButton
                android:id="@+id/option_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_0"
                android:textColor="@color/light_black" />

            <RadioButton
                android:id="@+id/option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_1"
                android:textColor="@color/light_black" />

            <RadioButton
                android:id="@+id/option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_2"
                android:textColor="@color/light_black" />

            <RadioButton
                android:id="@+id/option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:textColor="@color/light_black" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="@id/activity_options"
            app:layout_constraintStart_toStartOf="@id/activity_options"
            app:layout_constraintTop_toBottomOf="@id/activity_options" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>