<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background_screen">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_with_google_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/dark_white"
            android:text="@string/sign_up_with_google"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            app:cornerRadius="6dp"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            style="@style/Widget.Rightway.Divider"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/sign_up_with_google_btn"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_google_btn" />

        <TextView
            android:id="@+id/or_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            app:layout_constraintEnd_toStartOf="@id/divider2"
            app:layout_constraintStart_toEndOf="@id/divider1"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_google_btn" />

        <View
            android:id="@+id/divider2"
            style="@style/Widget.Rightway.Divider"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/sign_up_with_google_btn"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_google_btn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="@id/or_textview"
            app:layout_constraintStart_toStartOf="@id/or_textview"
            app:layout_constraintTop_toBottomOf="@id/or_textview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="@id/first_name_input_layout"
            app:layout_constraintStart_toStartOf="@id/first_name_input_layout"
            app:layout_constraintTop_toBottomOf="@id/first_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@id/last_name_input_layout"
            app:layout_constraintStart_toStartOf="@id/last_name_input_layout"
            app:layout_constraintTop_toBottomOf="@id/last_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/email_input_layout"
            app:layout_constraintStart_toStartOf="@id/email_input_layout"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/password_requirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/password_requirements"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

        <RadioGroup
            android:id="@+id/user_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/trainee"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/password_input_layout"
            app:layout_constraintStart_toStartOf="@id/password_input_layout"
            app:layout_constraintTop_toBottomOf="@id/password_requirements">

            <RadioButton
                android:id="@+id/trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer"
                android:textColor="@color/light_black" />

            <RadioButton
                android:id="@+id/trainee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainee"
                android:textColor="@color/light_black" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_with_email_password_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_disabled"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="@id/user_options"
            app:layout_constraintStart_toStartOf="@id/user_options"
            app:layout_constraintTop_toBottomOf="@id/user_options" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ask_user_registered_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_registered"
            android:textColor="@color/light_black"
            app:layout_constraintStart_toStartOf="@id/sign_up_with_email_password_btn"
            app:layout_constraintTop_toBottomOf="@id/sign_up_with_email_password_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_link_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/ask_user_registered_textview"
            app:layout_constraintStart_toEndOf="@id/ask_user_registered_textview"
            app:layout_constraintTop_toTopOf="@id/ask_user_registered_textview" />

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:id="@+id/animationView"-->
        <!--            android:layout_width="100dp"-->
        <!--            android:layout_height="100dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:lottie_autoPlay="true"-->
        <!--            app:lottie_loop="true"-->
        <!--            app:lottie_rawRes="@raw/loading" />-->

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/sign_up_with_email_password_btn"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_with_email_password_btn"
            app:layout_constraintTop_toTopOf="@+id/sign_up_with_email_password_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>