<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.trainee.SendEmailFragment">

    <data>

        <variable
            name="emailViewModel"
            type="com.rahafcs.co.rightway.ui.trainee.EmailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="locale">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back_arrow"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/to_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/to"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_arrow" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address_edit_text"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subject_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/subject"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/to_textview"
                app:layout_constraintTop_toBottomOf="@id/email_address_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subject_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject_edit_text"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={emailViewModel.preSubject}"
                    app:messageKey="@{emailViewModel.preSubject}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/message_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/message"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/subject_textview"
                app:layout_constraintTop_toBottomOf="@id/subject_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/type_your_message_here"
                app:layout_constraintBottom_toTopOf="@id/send_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message_textview">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_edit_text"
                    messageKey="@{emailViewModel.preMessage}"
                    userInfo="@{emailViewModel.user}"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890\n "
                    android:ems="10"
                    android:gravity="start"
                    android:inputType="text"
                    android:lines="10"
                    android:text="@={emailViewModel.preMessage}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16sp"
                android:text="@string/send"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>